cmake_minimum_required(VERSION 3.20)
project(OOP_Predavanja)

set(CMAKE_CXX_STANDARD 17)
include_directories(.)
add_executable(IT1 P1-Tartalja.cpp)
add_executable(IT2-1 P2-1.cpp)
add_executable(IT2-2 P2-2.cpp)
add_executable(IT3-1 P3-1.cpp)
add_executable(IT3-2 P3-2.cpp)
add_executable(IT4-1 P4-1.cpp)
add_executable(IT4-2 P4-2.cpp)
add_executable(IT5-1 P5-1.cpp)
add_executable(IT5-2 P5-2.cpp)
add_executable(IT6-1 P6-1.cpp)
add_executable(IT6-2 P6-2.cpp)
add_executable(IT7-1 P7-1.cpp)
add_executable(IT7-2 P7-2.cpp)
add_executable(IT8-1 P8-1.cpp)
add_executable(IT8-2 P8-2.cpp)
add_executable(IT9-1 P9-1.cpp)
add_executable(IT9-2 P9-2.cpp)
add_executable(IT10-1 P10-1.cpp)
add_executable(IT10-2 P10-2.cpp)
add_executable(IT11-1 P11-1.cpp)
add_executable(IT11-2 P11-2.cpp)
add_executable(IT12-1 P12-1.cpp)
add_executable(IT12-2 P12-2.cpp)
add_executable(IT13-1 P13-1.cpp)
add_executable(Primer Primer.cpp)