cmake_minimum_required(VERSION 3.20)
project(OOP_Predavanja)

set(CMAKE_CXX_STANDARD 14)

add_executable(IT1 P1-Tartalja.cpp)
add_executable(IT2-1 P2-1.cpp)
add_executable(IT2-2 P2-2.cpp)
add_executable(IT3-1 P3-1.cpp)
add_executable(IT3-2 P3-2.cpp)
add_executable(IT4-1 P4-1.cpp)
add_executable(IT4-2 P4-2.cpp Klase.h)